@@ -8,7 +8,21 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, macos-10.15, windows-2019]
+        target:
+          - x86_64-unknown-linux-gnu
+          - x86_64-unknown-linux-musl
+          - x86_64-apple-darwin
+          - x86_64-pc-windows-msvc
+        include:
+          - target: x86_64-unknown-linux-gnu
+            os: ubuntu-20.04
+          - target: x86_64-unknown-linux-musl
+            os: ubuntu-20.04
+            use-cross: true
+          - target: x86_64-apple-darwin
+            os: macos-10.15
+          - target: x86_64-pc-windows-msvc
+            os: windows-2019
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -16,16 +30,21 @@ jobs:
       uses: actions-rs/toolchain@v1.0.6
       with:
         toolchain: 1.53.0 # MSRV
+        target: ${{ matrix.target }}
         override: true
         profile: minimal
     - name: Build a package
       uses: actions-rs/cargo@v1.0.1
       with:
         command: build
+        args: --target ${{ matrix.target }}
+        use-cross: ${{ matrix.use-cross }}
     - name: Run tests
       uses: actions-rs/cargo@v1.0.1
       with:
         command: test
+        args: --target ${{ matrix.target }}
+        use-cross: ${{ matrix.use-cross }}
 
   rustfmt:
     name: Rustfmt
